--- a/anime-detail.html
+++ b/anime-detail.html
@@ -2205,7 +2205,7 @@
 	    name: "Ova 0",
             cover: "https://www.dropbox.com/scl/fi/e90mvl54sx6as45mlwlfr/unnamed-1.jpg?rlkey=w5y5f5vipr6b97cqrke3zow2p&st=qjqrvo8v&raw=1",
             eps: [
-              { title: "One Punch-Man OVA 0 - Road to Hero"},
+              { title: "One Punch-Man OVA 0 - Road to Hero Sub"},
             ]
           },
           {
@@ -2214,23 +2214,23 @@
             cover: "https://www.dropbox.com/scl/fi/gt6int1d0scu0qkbd2e79/onepunch1.jpg?rlkey=rd15zof6ij6uhkje9ckemlfw3&st=ps4vgrz6&raw=1",
             eps: [
               { title: "One Punch-Man T1 Cap 1"},
-              { title: "One Punch-Man T1 Especial 1 - Una sombra que se esconde muy cerca"},
+              { title: "One Punch-Man T1 Especial 1 Sub"},
               { title: "One Punch-Man T1 Cap 2"},
               { title: "One Punch-Man T1 Cap 3"},
-              { title: "One Punch-Man T1 Especial 2 - El discípulo que es extremadamente poco hablador"},
+              { title: "One Punch-Man T1 Especial 2 Sub"},
               { title: "One Punch-Man T1 Cap 4"},
               { title: "One Punch-Man T1 Cap 5"},
-              { title: "One Punch-Man T1 Especial 3 - El ninja demasiado complicado"},
+              { title: "One Punch-Man T1 Especial 3 Sub"},
               { title: "One Punch-Man T1 Cap 6"},
               { title: "One Punch-Man T1 Cap 7"},
-              { title: "One Punch-Man T1 Especial 4 - El excesivamente insistente Bang"},
+              { title: "One Punch-Man T1 Especial 4 Sub"},
               { title: "One Punch-Man T1 Cap 8"},
               { title: "One Punch-Man T1 Cap 9"},
-              { title: "One Punch-Man T1 Especial 5 - Las hermanas a las que les pasan muchas cosas"},
+              { title: "One Punch-Man T1 Especial 5 Sub"},
               { title: "One Punch-Man T1 Cap 10"},
               { title: "One Punch-Man T1 Cap 11"},
               { title: "One Punch-Man T1 Cap 12"},
-              { title: "One Punch-Man T1 Especial 6 - El caso del asesinato que era demasiado imposible"},
+              { title: "One Punch-Man T1 Especial 6 Sub"},
             ]
           },
           {
@@ -2238,14 +2238,14 @@
 	    name: "Temporada 2",
             cover: "https://www.dropbox.com/scl/fi/xx302drnrqurqrj7eggdc/gsdgsdgsdg-1.jpg?rlkey=ee9b8kqmq7kdbef8tqr622d5j&st=9qw1ilb1&raw=1",
             eps: [
-              { title: "One Punch-Man T2 Especial 1 - Saitama y los usuarios de habilidades mediocres"},
-              { title: "One Punch-Man T2 Especial 2 - Salir a pescar con hombres de mediana edad"},
+              { title: "One Punch-Man T2 Especial 1 Sub"},
+              { title: "One Punch-Man T2 Especial 2 Sub"},
               { title: "One Punch-Man T2 Cap 1"},
               { title: "One Punch-Man T2 Cap 2"},
-              { title: "One Punch-Man T2 Especial 3 - Genos y su pérdida de memoria"},
-              { title: "One Punch-Man T2 Especial 4 - Juego y rivales"},
+              { title: "One Punch-Man T2 Especial 3 Sub"},
+              { title: "One Punch-Man T2 Especial 4 Sub"},
               { title: "One Punch-Man T2 Cap 3"},
-              { title: "One Punch-Man T2 Especial 5 - Prisionero Lindo-Lindo y los prisioneros escapados"},
+              { title: "One Punch-Man T2 Especial 5 Sub"},
               { title: "One Punch-Man T2 Cap 4"},
               { title: "One Punch-Man T2 Cap 5"},
               { title: "One Punch-Man T2 Cap 6"},
@@ -2255,7 +2255,7 @@
               { title: "One Punch-Man T2 Cap 10"},
               { title: "One Punch-Man T2 Cap 11"},
               { title: "One Punch-Man T2 Cap 12"},
-              { title: "One Punch-Man T2 Especial 6 - El caso de asesinato de Zombieman 2"},
+              { title: "One Punch-Man T2 Especial 6 Sub"},
             ]
           },
           {
