--- a/video-player.html
+++ b/video-player.html
@@ -839,7 +839,7 @@
           "9": { link:'https://www.dropbox.com/scl/fi/urwt2uoir4ykxk8at4n0y/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-9.mp4?rlkey=q4ug2eu1waazp4r2vpkopvx6f&st=fuhdxlue&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 9' },
           "10": { link:'https://www.dropbox.com/scl/fi/spam75xphrw6y1tdn0s80/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-10.mp4?rlkey=bf8peymo2p94leittco7ed2w5&st=erpheq6a&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/vv9frwkxnropfx3g102kb/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-11.mp4?rlkey=y7dmffaflyjt4b9tpnm8x8ytx&st=acovu8fb&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 11' },
-          "12": { link:'&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 12' },
+          "12": { link:'https://www.dropbox.com/scl/fi/7wf73dr5mhiz3ismtkg2b/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-12.mp4?rlkey=hj8452bn4nkq2kbh07clmj4wc&st=3emg4oae&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 12' },
         }
       },
       "16": {
@@ -973,7 +973,7 @@
           "9": { link:'https://www.dropbox.com/scl/fi/ns9cj99y04i8asxbax08y/The-Rising-of-the-Shield-Hero-T4-Cap-9.mp4?rlkey=5ai9ztgc1vtaj4p8j58l2ef6a&st=iuzt9olk&raw=1', title:'The Rising of the Shield Hero T4 Cap 9' },
           "10": { link:'https://www.dropbox.com/scl/fi/budjdprik17b6e7em7237/The-Rising-of-the-Shield-Hero-T4-Cap-10.mp4?rlkey=i580tvqny0xjrmwwubnz5zkyf&st=hbud1d1t&raw=1', title:'The Rising of the Shield Hero T4 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/rq6sy77wobw3n6p9dw8r5/The-Rising-of-the-Shield-Hero-T4-Cap-11.mp4?rlkey=ivdkfje8czvs0tlndju08qpmx&st=09vum50u&raw=1', title:'The Rising of the Shield Hero T4 Cap 11' },
-          "12": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 12' },
+          "12": { link:'https://www.dropbox.com/scl/fi/o9bbutfa6cvyks8r6room/The-Rising-of-the-Shield-Hero-T4-Cap-12.mp4?rlkey=usr9cord5gr1t8brkl45ceua4&st=rmk7lxt4&raw=1', title:'The Rising of the Shield Hero T4 Cap 12' },
         }
       },
       "20": {
@@ -1373,7 +1373,7 @@
           "9": { link:'https://www.dropbox.com/scl/fi/u7fixhi1u75ah3jlqmyce/Tsuyokute-New-Saga-T1-Cap-9.mp4?rlkey=httfo53lg735dtc999lkfr84p&st=bh3smvlc&raw=1', title:'Tsuyokute New Saga T1 Cap 9' },
           "10": { link:'https://www.dropbox.com/scl/fi/gpp70wi06x7vtt8qk2p7g/Tsuyokute-New-Saga-T1-Cap-10.mp4?rlkey=jasvv2so4s52daallrlwwtbgh&st=unzdkzkf&raw=1', title:'Tsuyokute New Saga T1 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/4lw4zmvjen7wigg3uw291/Tsuyokute-New-Saga-T1-Cap-11.mp4?rlkey=fo9bq0w2jaia0ia8jrhvhb8gl&st=n5yz5g3g&raw=1', title:'Tsuyokute New Saga T1 Cap 11' },
-          "12": { link:'&raw=1', title:'Tsuyokute New Saga T1 Cap 12' },
+          "12": { link:'https://www.dropbox.com/scl/fi/yl6fc503zn3uii2ssmupu/Tsuyokute-New-Saga-T1-Cap-12.mp4?rlkey=0t2xrcfsfbxbqzmpmxsipd9m0&st=cwdios5u&raw=1', title:'Tsuyokute New Saga T1 Cap 12' },
         }
       },
       "36": {
