--- a/anime-detail.html
+++ b/anime-detail.html
@@ -213,6 +213,7 @@
   <audio id="Kamitachi-ost" loop><source src="https://www.dropbox.com/scl/fi/368qrxasxdvt2fqcvm6h6/Kami-Tachi-ni-Hirowareta-Otoko-OP-Azusa-Tadokoro-Yasashii-Sekai-Sub-Espa-ol-Romaji-English.mp3?rlkey=qcn4qt0txld3ge8lzcs46t15x&st=wq1yu1y8&raw=1" type="audio/mpeg"></audio>
   <audio id="Oredake-ost" loop><source src="https://www.dropbox.com/scl/fi/xmqp2paia6h97fkwa7h6b/Pyramid-Daigyakuten-by-Spira-Spica-Ore-dake-Haireru-Kakushi-Dungeon-Opening.mp3?rlkey=3s0aeay9delzf6gavjj4bjxih&st=ued84mx7&raw=1" type="audio/mpeg"></audio>
   <audio id="OnePunch-ost" loop><source src="https://www.dropbox.com/scl/fi/hqjhazpztx23zcjffuh09/One-punch-man-The-Hero-OP-1-sub.-espa-ol-lyrics-letra.mp3?rlkey=z3bm1s9eoxzpcw3m6yslkhhl7&st=osh0hwc3&raw=1" type="audio/mpeg"></audio>
+  <audio id="Mashle-ost" loop><source src="https://www.dropbox.com/scl/fi/i4j87l2yp0vh4bf9vjasu/Creepy-Nuts-Bling-Bang-Bang-Born-TV-Anime-MASHLE-Collaboration-Music-Video-BBBB-1.mp3?rlkey=3vdjejznfw9yos02dudg1cgw7&st=g94kl144&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -1301,7 +1302,7 @@
       },
       17: {
         title: "The Gorila God's Go- To Girl",
-        desc: "Ciel Phantomhive es el niño más poderoso de toda Inglaterra, pero carga con las cicatrices de un sufrimiento indescriptible. Obligado a presenciar el brutal asesinato de sus queridos padres, Ciel fue posteriormente secuestrado y violentamente torturado. Desesperado por poner fin a su sufrimiento, el niño entregó su alma a cambio de una oportunidad de venganza, uniéndose a la única persona en quien podía confiar: Sebastian, un demonio Butler invocado desde las profundidades del infierno. Juntos, recorrerán los callejones más oscuros de Londres con la misión de acabar con quienes hacen el mal.",
+        desc: "Sophia es la tímida hija de un conde que únicamente desea llevar una vida tranquila, pero el Dios Gorila tiene otros planes. Dotada de una fuerza inigualable, se ve obligada a unirse a la Real Orden de Caballeros, lo que convierte su tranquila vida en un caos. Ahora deberá hacer malabares con los estudios, la vida de caballero y su gran poder. ¿Quién podría creer que tener la fuerza de un gorila fuera tan complicado?",
         cover: "gorila11.jpg",
         seasons: [
           {
@@ -1878,7 +1879,7 @@
       },
       31: {
         title: "To Your Eternity",
-        desc: "Ha sido unos meses desde Kiyoshi renunció a su trabajo para cumplir su sueño de tener un dagashis-ya en las afueras de Tokio. Él quería vivir el resto de su vida viendo niñas. Su plan fue un éxito, con las niñas de la escuela cercana que visitan su tienda todos los días y hablaban con él felizmente como amigos. Sin embargo, poco después que las vacaciones de verano comenzaran, se dio cuenta que una de sus clientes habituales, Chie, robaba algunos dulces. A pesar de que no había mucha pérdida, no podía dejar que se saliera con la suya. Cuando se le preguntó, ella dijo que le iba a compensar por ello mediante el trabajo a tiempo parcial en su tienda. Así comienza sus vacaciones de verano con pequeñas niñas.",
+        desc: "Al principio el \"orbe\" llegó a la Tierra. Podía hacer dos cosas: tomar la forma de cualquier cosa con la que interactuara y regenerarse para volver a la vida. El orbe se convirtió en roca, luego en lobo y finalmente en un chico, pero vaga por el mundo como un recién nacido que no sabe nada. Como niño se convierte en Fushi. Poco a poco va conociendo la amabilidad humana y Fushi no solo aprende a sobrevivir, sino que crece como \"persona\". Pero su viaje queda ensombrecido por Nokker, un destructivo e inexplicable enemigo, así como por las crueles depedidas de aquellos a quienes ama.",
         cover: "fumetsuportada.jpg",
         seasons: [
           {
@@ -2268,6 +2269,49 @@
           }
         ]
       },
+      41: {
+        title: "Mashle",
+        desc: "Este es un mundo de magia. Este es un mundo en el que todos usan la magia habitualmente. En un bosque profundo y oscuro de este mundo de magia, hay un chico que se ejercita a diario. Su nombre es Mash Burnedead y tiene un secreto: no puede usar magia. Lo único que quería era vivir tranquilo con su familia, pero cuando un día intentan matarlo por no poder usar magia, las cosas se salen de control y acaba inscrito en una escuela mágica, donde su objetivo será convertirse en el \"Iluminado Divino\", el alumno más formidable, el elegido de Dios. ¿Podrán sus poderosos músculos derrotar a los más brillantes usuarios de magia? ¡Se alza el telón de esta historia de magia y fantasía peculiar en el que la fuerza puede con la magia!",
+        cover: "mashle1.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/lq148lh81cae2m0m8ezby/mashlet1.jpg?rlkey=ykcyoj3kgip5ibuxhlvp10373&st=yqgn83dz&raw=1",
+            eps: [
+              { title: "Mashle T1 Cap 1"},
+              { title: "Mashle T1 Cap 2"},
+              { title: "Mashle T1 Cap 3"},
+              { title: "Mashle T1 Cap 4"},
+              { title: "Mashle T1 Cap 5"},
+              { title: "Mashle T1 Cap 6"},
+              { title: "Mashle T1 Cap 7"},
+              { title: "Mashle T1 Cap 8"},
+              { title: "Mashle T1 Cap 9"},
+              { title: "Mashle T1 Cap 10"},
+              { title: "Mashle T1 Cap 11"},
+              { title: "Mashle T1 Cap 12"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/fyanzghps0unrat46x3dp/mashlet2.jpg?rlkey=g6crdk8as99o8k4jkyz5u91im&st=kobq9hht&raw=1",
+            eps: [
+              { title: "Mashle T2 Cap 1"},
+              { title: "Mashle T2 Cap 2"},
+              { title: "Mashle T2 Cap 3"},
+              { title: "Mashle T2 Cap 4"},
+              { title: "Mashle T2 Cap 5"},
+              { title: "Mashle T2 Cap 6"},
+              { title: "Mashle T2 Cap 7"},
+              { title: "Mashle T2 Cap 8"},
+              { title: "Mashle T2 Cap 9"},
+              { title: "Mashle T2 Cap 10"},
+              { title: "Mashle T2 Cap 11"},
+              { title: "Mashle T2 Cap 12"},
+            ]
+          }
+        ]
+      },
 
     };
 
@@ -2411,7 +2455,7 @@
     (function setupAudio(){
       // playMap ahora puede contener arrays (varias pistas) o strings (una pista).
       const playMap = {
-        1: ['dd-ost'],             // ejemplo: anime 1 tiene 2 músicas, se elegirá aleatoriamente
+        1: ['dd-ost'],            
         2: ['jj-ost'],
         3: ['kb-music'],
         4: ['rz-ost'],
@@ -2451,10 +2495,8 @@
         38: ['Kamitachi-ost'],
         39: ['Oredake-ost'],
         40: ['OnePunch-ost'],
+        41: ['Mashle-ost'],
       };
-
-      // (Opcional) Si quieres añadir más pistas a un anime, pon arrays con más ids:
-      // e.g. playMap[4] = ['rz-ost','otra-pista-id'];
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
       // Pre-capturamos todos los ids de audio válidos del mapa para cualquier uso posterior
