--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
       {id:38, title:"Kami-tachi ni Hirowareta Otoko", aliases: ["By the Grace of the Gods"], img:"Kamitachi.jpg", rating:4.7, genres:["Fantasía","Aventura","Slice of Life","Isekai","Shōnen"]},
       {id:39, title:"Ore dake Haireru Kakushi Dungeon", aliases: ["The Hidden Dungeon Only I Can Enter"], img:"oredake.jpg", rating:4.5, genres:["Fantasía","Comedia","Harem","Ecchi","Acción","Romance","Shōnen"]},
       {id:40, title:"One Punch-Man", aliases: ["One-Punch Man"], img:"onepunch.jpg", rating:4.8, genres:["Comedia","Acción","Fantasía","Seinen","Ciencia ficción","Superhéroes"]},
+      {id:41, title:"Mashle", aliases: ["Mash Burnedead"], img:"mashle1.jpg", rating:4.8, genres:["Comedia","Acción","Fantasía","Aventura","Shōnen"]},
     ];
 
 
