--- a/video-player.html
+++ b/video-player.html
@@ -1501,7 +1501,36 @@
           "18": { link:'https://www.dropbox.com/scl/fi/o0vwaws7yufzvf0bs3s3v/One-Punch-Man-T2-Especial-6.mp4?rlkey=26ju0wkico88cwji2710lxqa2&st=zqq9tn0a&raw=1', title:'One Punch-Man T2 Especial 6' },
         }
       },
-
+      "41": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/w8yn0ywo7fhg0f3deooqk/Mashle-T1-Cap-1.mp4?rlkey=hgh0sox2rx15sz9zj83rhfixc&st=j10kwn2m&raw=1', title:'Mashle T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/hbpyox81zvkb13kd6bvep/Mashle-T1-Cap-2.mp4?rlkey=nyxxw4nun3bw00mw1pzyyaav0&st=sqjpacw1&raw=1', title:'Mashle T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/m4eo6fs2bbvs6s79ht409/Mashle-T1-Cap-3.mp4?rlkey=hojm8u2xschqcqwhj77hjlktv&st=2fvfc3ed&raw=1', title:'Mashle T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/yge1ukxvpiv27vmiyc22e/Mashle-T1-Cap-4.mp4?rlkey=av65jai6t6ngzcoyifjfo9bxb&st=slzbkhi0&raw=1', title:'Mashle T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/ulu8muemv133t7x7x3nmt/Mashle-T1-Cap-5.mp4?rlkey=17oeuuepux2tb3d5avs8fkuju&st=xo8h622r&raw=1', title:'Mashle T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/b9kddw6wq6i2rsxlmfsol/Mashle-T1-Cap-6.mp4?rlkey=0hf1y87dhpo9q98blkgily4xr&st=851yd63t&raw=1', title:'Mashle T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/7zhp45oyath451zw94wux/Mashle-T1-Cap-7.mp4?rlkey=r2dw30oybjawn4g2q6n6vs07e&st=gdief1ai&raw=1', title:'Mashle T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/veb9n5fu8al20s4e5rrd7/Mashle-T1-Cap-8.mp4?rlkey=o43xvh0q27i17c8l3rd3itj7u&st=56oo8q8n&raw=1', title:'Mashle T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/1rdlsjafuj1rt16nal8w2/Mashle-T1-Cap-9.mp4?rlkey=bdvo5jpgoba1wp1pqmyqptgos&st=pu4m7eb9&raw=1', title:'Mashle T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/umvuizxggwghl4soc81y9/Mashle-T1-Cap-10.mp4?rlkey=7wr34zbjfmmv68q650kiw1axi&st=zprq11z3&raw=1', title:'Mashle T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/ov3vcq0ncol2tck0zoaht/Mashle-T1-Cap-11.mp4?rlkey=urys9tszm0y0y0j9eys74kmrl&st=kh920j52&raw=1', title:'Mashle T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/gxfx58uxi4d63cpx3uvcc/Mashle-T1-Cap-12.mp4?rlkey=gjtvqxxs4xarcfabx1pjapkob&st=rcgy1wk9&raw=1', title:'Mashle T1 Cap 12' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/kwt8y26a9t9kjze7k93k3/Mashle-T2-Cap-1.mp4?rlkey=2t9mo3xj3h4y4815nyuu815qq&st=o3fwvxb0&raw=1', title:'Mashle T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/imyc6cgwldwvko0q0eu66/Mashle-T2-Cap-2.mp4?rlkey=vzmwzt2i9zwbynzw0hlwjdvgr&st=ikm96agc&raw=1', title:'Mashle T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/zp64v6b1j52zxhmt1gwuv/Mashle-T2-Cap-3.mp4?rlkey=vuw98yvxooryns6cazkaannqd&st=wkothb0v&raw=1', title:'Mashle T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/oszkhqlfdd0l9d1ifv3y8/Mashle-T2-Cap-4.mp4?rlkey=7ab9ve9n1xhm3d9z248iozo2b&st=d2822g3k&raw=1', title:'Mashle T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/vk6sn671nk9xhetu7lx7e/Mashle-T2-Cap-5.mp4?rlkey=vtrrkyypdqlnijxah316ctvmh&st=dfog19wc&raw=1', title:'Mashle T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/ljiwoqsjmkhqmps5kdt9g/Mashle-T2-Cap-6.mp4?rlkey=eaxx7a6ollwe34qcxlrx7c59j&st=qcdyh6nt&raw=1', title:'Mashle T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/7v07qgtl9n7f0bwmc1qym/Mashle-T2-Cap-7.mp4?rlkey=hslj3hm41au88a4tb6jdcccpg&st=mtdmak94&raw=1', title:'Mashle T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/dh5ihi8vt4l4vdtsaeob5/Mashle-T2-Cap-8.mp4?rlkey=p5c0kp12ij1odxtzg6ponntnl&st=c6glriwf&raw=1', title:'Mashle T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/x3bh4j90ej4rxg9r8nnn4/Mashle-T2-Cap-9.mp4?rlkey=9gx947ghtmargzq7rrjov5r0m&st=3ejwlx8s&raw=1', title:'Mashle T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/7nm5mkwmx8gb3rsmgrp8j/Mashle-T2-Cap-10.mp4?rlkey=yihhcv2b7zs087lhkdg60p1vc&st=0v4m9up6&raw=1', title:'Mashle T2 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/kz3vqgbcotykpn1m541ze/Mashle-T2-Cap-11.mp4?rlkey=xxovfp4xxkvsa77fi7elwj5bl&st=syqskyv2&raw=1', title:'Mashle T2 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/ie5wg18o9y38dmque5yof/Mashle-T2-Cap-12.mp4?rlkey=00mvms2qhkglyv5h2d01qzdhh&st=ylj3witw&raw=1', title:'Mashle T2 Cap 12' },
+        }
+      },
 
 
 
