--- a/anime-detail.html
+++ b/anime-detail.html
@@ -189,7 +189,7 @@
   <audio id="ki-ost" loop><source src="https://www.dropbox.com/scl/fi/f6ndrktnbc4ytwkagoztm/Lyrics-AMV-Kimisen-OP-Full-Against.-Kaori-Ishihara.mp3?rlkey=rcpatwiczklgamqzd4lz0yciy&st=3d5g1hid&raw=1" type="audio/mpeg"></audio>
   <audio id="gorila-ost" loop><source src="https://www.dropbox.com/scl/fi/2nhe4m6a0gi5h0etmn85k/The-Gorilla-Gods-Go-To-Girl-illuminate-Nakamura-Shuugo-KanRomPer.mp3?rlkey=l4ybmcpn2m0cs53t5zsz3gzfs&st=7qhapwx8&raw=1" type="audio/mpeg"></audio>
   <audio id="wi-ost" loop><source src="https://www.dropbox.com/scl/fi/7agg8plmd2or8wf2dh8op/Wistoria-Wand-and-Sword-Opening-Fire-and-Fear.mp3?rlkey=gwmbtv257uv8tgbm3ocntmqyo&st=4otix8h3&raw=1" type="audio/mpeg"></audio>
-  <audio id="chainsaw-ost" loop><source src="https://www.dropbox.com/scl/fi/gwbsb3xj6r0iztedxonac/Chainsaw-Blood-Vaundy-Ending-1-Chainsaw-Man-Subtitulado-al-Espa-ol-Romaji.mp3?rlkey=jxdvr3lqe1mjofrvnejqoh51x&st=d0fged1m&raw=1" type="audio/mpeg"></audio>
+  <audio id="chainsaw-ost" loop><source src="https://www.dropbox.com/scl/fi/t6temen6jhtcat5wo5btq/Chainsaw-Man-The-Movie-Reze-Arc-Theme-Song-FULL-IRIS-OUT-by-Kenshi-Yonezu-Lyrics.mp3?rlkey=9zk6kstzlk0qbrz01fhww6uga&st=2x6edo00&raw=1" type="audio/mpeg"></audio>
   <audio id="heroescudo-ost" loop><source src="https://www.dropbox.com/scl/fi/y3z7i485lh1ulukkgf5al/MADKID-RISE-The-Rising-of-the-Shield-Hero-Opening-Theme.mp3?rlkey=f3hqusbdwoptmclw791ink1wb&st=2e19zffs&raw=1" type="audio/mpeg"></audio>
   <audio id="ov-ost" loop><source src="https://www.dropbox.com/scl/fi/oc430yju092ojpzr1pagj/Hinooka-Rei-Uzuho-Overflow-Ending-Full-Sub.-Espa-ol-Romaji.mp3?rlkey=lztgexhh754gv0vbt8k6cmnkv&st=ro6svsmq&raw=1" type="audio/mpeg"></audio>
   <audio id="shi-ost" loop><source src="https://www.dropbox.com/scl/fi/x2vj0xspavosqj0a5pfla/Shiunji-ke-no-Kodomo-tachi-Opening-Full-Honey-Lemon-Sub.-Espa-ol.mp3?rlkey=g4wr62353xnd7w6y3hhg6b2yc&st=jkzhp0ov&raw=1" type="audio/mpeg"></audio>
@@ -1328,7 +1328,7 @@
       18: {
         title: "Chainsaw Man",
         desc: "Denji es un adolescente que vive con un demonio motosierra llamado Pochita. Para pagar la deuda que le dejó su padre tras su muerte, ha tenido que ganarse el pan como puede matar demonios y vender sus cadáveres a la mafia, aunque su vida siempre ha sido miserable. Cuando una traición provoca la muerte de Denji, Pochita hace un contrato con él y Denji revive como Chainsaw Man, un ser humano con el corazón de un demonio.",
-        cover: "chaiwportada.jpg",
+        cover: "chaiportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1346,6 +1346,14 @@
               { title: "Chainsaw Man T1 Cap 10"},
               { title: "Chainsaw Man T1 Cap 11"},
               { title: "Chainsaw Man T1 Cap 12"},
+            ]
+          },
+          {
+            num: 2,
+	    name: "Película 1",
+            cover: "https://www.dropbox.com/scl/fi/qwllg4jlrbdnamf5h8spf/chait2.jpg?rlkey=cj3r0ny8n5yhk4b2fcbz68jh7&st=m9dobxos&raw=1",
+            eps: [
+              { title: "Chainsaw Man Movie: Reze-hen 【SUB ESPAÑOL】【HD】"},
             ]
           }
         ]
