--- a/video-player.html
+++ b/video-player.html
@@ -902,6 +902,9 @@
           "10": { link:'https://www.dropbox.com/scl/fi/admdwz93o25tl1g7lddwi/Chainsaw-Man-T1-Cap-10.mp4?rlkey=33syf1wvt8x7x8cdngc4tustr&st=laty1sj1&raw=1', title:'Chainsaw Man T1 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/plzrd40sdkee01i6n4ui7/Chainsaw-Man-T1-Cap-11.mp4?rlkey=av1qr7ggsgqmn0w42upbyzqnf&st=pu33j4kh&raw=1', title:'Chainsaw Man T1 Cap 11' },
           "12": { link:'https://www.dropbox.com/scl/fi/ccez45htv7zwxcsrbi4k1/Chainsaw-Man-T1-Cap-12.mp4?rlkey=ok47yk3smkdh2vcc3le118cyh&st=1m3leanw&raw=1', title:'Chainsaw Man T1 Cap 12' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/zxt1lctmz1m4cjpw8gyzj/Chainsaw-Man-Movie-Reze-hen-SUB-ESPA-OL-HD.mp4?rlkey=bqvnapssv0yhlktycrffxzlcd&st=ghqvpwu0&raw=1', title:'Chainsaw Man Movie: Reze-hen 【SUB ESPAÑOL】【HD】' },
         }
       },
       "19": {
